commits des suppression de quelque pages

--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       padding: 5px 20px;
       display: block;
       position: relative;
-      color: #000000; }
+      color: #ffffff; }
       .site-mobile-menu .site-nav-wrap a.active, .site-mobile-menu .site-nav-wrap a:hover {
         color: #0389ff; }
     .site-mobile-menu .site-nav-wrap li {
